# dovcha_market

./: FEEDBACKS.md  README.md  pyproject.toml
alembic/versions/: da08baf3973d_imag_id_nullable_shop_table.py
app/: config.py  database.py  main.py  middleware.py  models.py  utils.py
app/routers/: __init__.py  cart.py  category.py  item.py  item_cart.py  shop.py  subcategory.py  users.py
app/routers/admin/: __init__.py  auth.py  settings.py  view.py
app/routers/auth/: auth.py  register.py
app/schemas/: __init__.py  cart.py  category.py  dependencies.py  shop.py
